--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
     "next": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rehype-document": "^7.0.3",
+    "rehype-format": "^5.0.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-css-selectors": "^1.0.1",
+    "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "remark-toc": "^9.0.0",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
